# epic-freebies-helper

./: AGENTS.md  README.en.md  README.md  pyproject.toml
.github/workflows/: README.en.md  README.md  epic-gamer.yml
app/: deploy.py  settings.py
app/extensions/: hcaptcha_adapter.py  llm_adapter.py  numbered_line_solver.py
app/services/: epic_authorization_service.py  epic_games_service.py
docker/: docker-compose.yaml
docs/: maintenance-log.md
tests/: test_glm_adapter.py  test_hcaptcha_adapter.py  test_numbered_line_solver.py
