[project]
name = "epic-freebies-helper"
version = "0.4.1"
dependencies = [
    "apscheduler>=3.11.0",
    "pydantic-settings>=2.8.1",
    "celery[redis]>=5.4.0",
    "hcaptcha-challenger[camoufox]>=0.18.13",
    "browserforge>=1.2.4",
]
requires-python = ">=3.12,<=3.13"
authors = [
    { name = "Ronchy2000" }
]
description = "🍷 Gracefully claim weekly free games from Epic Store."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["epic", "epic-freebies-helper", "epic-games-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/Ronchy2000/epic-freebies-helper"
Documentation = "https://github.com/Ronchy2000/epic-freebies-helper"
Repository = "https://github.com/Ronchy2000/epic-freebies-helper.git"
Issues = "https://github.com/Ronchy2000/epic-freebies-helper/issues"
Changelog = "https://github.com/Ronchy2000/epic-freebies-helper/blob/master/docs/maintenance-log.md"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
skip-string-normalization = true


[dependency-groups]
dev = [
    "black>=25.1.0",
    "celery-types>=0.23.0",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
]
